// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PickupOrDelivery stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      aria-required="false"
      class="grid gap-3 space-y-3"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <label
          class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="delivery-option"
        >
          Ship to Address
        </label>
      </div>
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-center space-x-1"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              data-slot="label"
              for="pickup-option"
            >
              Free pickup in
            </label>
            <div
              class="text-sm"
            >
              <p>
                <button
                  class="text-primary underline hover:text-primary/80 cursor-pointer"
                  type="button"
                >
                  Select Store
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > DeliveryDisabled story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      aria-required="false"
      class="grid gap-3 space-y-3"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-disabled=""
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          disabled=""
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        />
        <label
          class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 opacity-50 cursor-not-allowed"
          data-slot="label"
          for="delivery-option"
        >
          Ship to Address
        </label>
      </div>
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-center space-x-1"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              data-slot="label"
              for="pickup-option"
            >
              Free pickup in
            </label>
            <div
              class="text-sm"
            >
              <p>
                <button
                  class="text-primary underline hover:text-primary/80 cursor-pointer"
                  type="button"
                >
                  Downtown Store
                </button>
              </p>
            </div>
          </div>
          <span
            class="text-sm font-normal select-none text-muted-foreground mt-1"
          >
            Now available for pickup today.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > DesktopLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      aria-required="false"
      class="grid gap-3 space-y-3"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <label
          class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="delivery-option"
        >
          Ship to Address
        </label>
      </div>
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-center space-x-1"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              data-slot="label"
              for="pickup-option"
            >
              Free pickup in
            </label>
            <div
              class="text-sm"
            >
              <p>
                <button
                  class="text-primary underline hover:text-primary/80 cursor-pointer"
                  type="button"
                >
                  Downtown Store
                </button>
              </p>
            </div>
          </div>
          <span
            class="text-sm font-normal select-none text-muted-foreground mt-1"
          >
            Now available for pickup today.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > MobileLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      aria-required="false"
      class="grid gap-3 space-y-3"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <label
          class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="delivery-option"
        >
          Ship to Address
        </label>
      </div>
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-center space-x-1"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              data-slot="label"
              for="pickup-option"
            >
              Free pickup in
            </label>
            <div
              class="text-sm"
            >
              <p>
                <button
                  class="text-primary underline hover:text-primary/80 cursor-pointer"
                  type="button"
                >
                  Select Store
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > NoStoreSelected story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      aria-required="false"
      class="grid gap-3 space-y-3"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        />
        <label
          class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="delivery-option"
        >
          Ship to Address
        </label>
      </div>
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-center space-x-1"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              data-slot="label"
              for="pickup-option"
            >
              Free pickup in
            </label>
            <div
              class="text-sm"
            >
              <p>
                <button
                  class="text-primary underline hover:text-primary/80 cursor-pointer"
                  type="button"
                >
                  Select Store
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > PickupDisabled story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      aria-required="false"
      class="grid gap-3 space-y-3"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <label
          class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="delivery-option"
        >
          Ship to Address
        </label>
      </div>
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-disabled=""
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          disabled=""
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-center space-x-1"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 opacity-50 cursor-not-allowed"
              data-slot="label"
              for="pickup-option"
            >
              Pickup unavailable at
            </label>
            <div
              class="text-sm"
            >
              <p>
                <button
                  class="text-primary underline hover:text-primary/80 cursor-pointer"
                  type="button"
                >
                  Downtown Store
                </button>
              </p>
            </div>
          </div>
          <span
            class="text-sm font-normal select-none text-destructive mt-1"
          >
            Try another store or select delivery.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > PickupSelected story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      aria-required="false"
      class="grid gap-3 space-y-3"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        />
        <label
          class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          data-slot="label"
          for="delivery-option"
        >
          Ship to Address
        </label>
      </div>
      <div
        class="flex items-start space-x-2"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-center space-x-1"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              data-slot="label"
              for="pickup-option"
            >
              Free pickup in
            </label>
            <div
              class="text-sm"
            >
              <p>
                <button
                  class="text-primary underline hover:text-primary/80 cursor-pointer"
                  type="button"
                >
                  Downtown Store
                </button>
              </p>
            </div>
          </div>
          <span
            class="text-sm font-normal select-none text-muted-foreground mt-1"
          >
            Now available for pickup today.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
